Added title, nav, and filter css

--- a/css/index.css
+++ b/css/index.css
@@ -1,21 +1,38 @@
+#title {
+    text-align: center;
+    font-family: 'Verdana';
+    font-size: 30pt;
+}
+
+nav {
+    text-align: center;
+}
+
+.form-container {
+    text-align: left;
+    border: grey solid 1px;
+    padding: 1rem;
+    margin: 1rem 2rem;
+    background-color: whitesmoke;
+    box-shadow: 3px 4px #6495ED
+}
+
+#category-filter {
+    text-align: center;
+}
+
 body {
     margin: 20;
     font-family: monospace;
+    background-color: wheat;
 }
 
 .recipe-card {
     text-align: left;
     border: grey solid 2px;
     padding: 1rem;
-    width: 30rem;
-    margin: 1rem 5rem;
-    box-shadow: 3px 4px #008B8B
-}
-
-.container {
-    text-align: left;
-    border: grey solid 1px;
-    padding: 1rem;
+    width: 35rem;
     margin: 1rem 2rem;
-    box-shadow: 3px 4px #6495ED
+    background-color: oldlace;
+    box-shadow: 3px 4px #008B8B
 }
